dia calc: fix safari table headings alignment

--- a/dia-calc/app.css
+++ b/dia-calc/app.css
@@ -1,3 +1,3 @@
 .table th {
-	text-align: left;
+	text-align: left !important;
 }
